# ReginosReceptai

./: .gitignore  README.md  about.html  apie.html  index.html  styles.css
generator/: CMakeLists.txt  Makefile  css_header.h  html-generator.c  html-generator.h  main.c
generator/Receptu_tekstai/: Receptas_1.txt  Receptas_2.txt  Receptas_3.txt  Receptas_4.txt  Receptas_5.txt  Receptas_6.txt  Receptas_7.txt
lib/: CMakeLists.txt  HTML_code_doubly_linked_list.c  HTML_code_doubly_linked_list.h  html-doubly-linked-list.c  html-doubly-linked-list.h  html-generator.c  libhtml-generator.lib  main.c  utilities.h  utils.h
lib/src/: html-generator.c
receptai/: 1.html  2.html  3.html  4.html  5.html  7.html
